--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.94.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
